--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongo-store": "0.0.2",
     "mongod": "^2.0.0",
     "mongoose": "^4.8.4",
+    "morgan": "^1.8.1",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
