--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/wdi-sg/wdi-project-2-desmondhengwj#readme",
   "dependencies": {
     "assert": "^1.4.1",
+    "bcrypt": "^1.0.2",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
